25 May 2003 mipsator
 * few changes related to autoconf compatibility.

23 May 2003 mipsator
 * added AC_COMPAT in pmkfile.sample plus some comments.
 * added samples/ac_config.h for autoconf compatibility test.
 * AC_COMPAT now handle FILENAME to set the configuration file to process.
 * ac_file is now included in pmkdata structure.

22 May 2003 mipsator
 * improve a bit copy_text_file().
 * add parse_ac_config(), not finished yet but it doesn't break the code.

21 May 2003 mipsator
 * added copy_text_file().
 * misc on buffers.

15 May 2003 xsa
 * now using hash_add_array() for the predefined variables in pmksetup.

15 May 2003 mipsator
 * added AC_COMPAT for autoconf compatibility.
 * cleanup in various files (XXX comments).
 * added missing check (XXX comments).
 * misc.

14 May 2003 mipsator
 * moved functab and misc related.
 * use hash_add_array() in hash_test.

06 May 2003 mipsator
 * use depend_check() in check functions.
 * rewritten depend_check().
 * added require_check().

05 May 2003 mipsator
 * make hash use ISO C99 booleans.
 * added hash_add_array().

05 May 2003 xsa
 * added SYSCONFDIR to predef_vars(), so it's now in the pmk.conf as well.

04 May 2003 xsa
 * added verbosef(), now using it instead of debugf for the -V flag.
 * added predef_vars(), adding the static variables to the pmk.conf file. 
 * error checking when hadh_add() 'ing values. 

04 May 2003 mipsator
 * finished and tested hash_resize().
 * added hash_set_grow() to set autogrow mode.
 * added autogrow in htable.
 * added hash_resize(), not tested yet.
 * added hash_add_cell() and make hash_add() and hash_resize() using it.
 * implemented depend_check().
 * added checks in str_to_def().
 * more checks in record_def().
 * added checks in label_set() and label_check().

03 May 2003 mipsator
 * rewritten record_def().
 * added stuff to store label states (now need to handle dependencies).
 * added cleaning function to simplify pmk (need more work).

02 May 2003 mipsator