@@ -2,4 +2,4 @@
 
 /* will add more later ... */
 
-#define HAVE_STRLCPY 1
+#define HAVE_STRLCPY 1	/* pmk parsed */
